--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<title>文字化けさせたくない</title>
+<title>文字化けさせたくないお</title>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="./css/style.css">
 
@@ -11,12 +11,10 @@
   <main>
 
     <section class="input">
-      <!-- <form name="form" onsubmit="return getCode(this)"> -->
       <form name="form" id="id_form">
         <div class="">
           <textarea name="code" cols=100 rows=10></textarea>
           <div class="btn-wrap">
-            <!-- <input class="btn-search" type="button" value="いったん検索" onclick="getCode();"> -->
             <input class="btn-check" type="button" value="いったん確認">
             <input class="btn-submit" type="button" value="変！換！">
           </div>
