--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
             <input class="btn-check" type="button" value="いったん確認">
             <input class="btn-submit" type="button" value="変！換！">
           </div>
+          <p class="txt">
+            エディタで編集したコード入れてみてください。<br>
+            メモ帳とかのはダメかも…<br>
+            今んとこ「&」判定できません。<br>
+            自力でおなしゃす。
+          </p>
         </div>
       </form>
     </section>
