--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
 <title>文字化けさせたくないお</title>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="./css/style.css">
+<!-- <link href="https://fonts.googleapis.com/earlyaccess/sawarabigothic.css" rel="stylesheet" /> -->
 
 </head>
 <body>
 
   <main>
 
+    <h1>文字化けさせたくないから。</h1>
+
     <section class="input">
       <form name="form" id="id_form">
         <div class="">
-          <textarea name="code" cols=100 rows=10 id="id_code"></textarea>
+          <textarea name="code" cols=100 rows=10 id="id_code">ここにコードを貼ってね。</textarea>
           <div class="btn-wrap">
             <input class="btn-check" type="button" value="いったん確認">
             <input class="btn-submit" type="button" value="変！換！">
@@ -33,7 +36,7 @@
     </section>
 
     <section class="output">
-      <div><pre id="output-code">ここに出るお( ＾ω＾)</pre></div>
+      <div><pre id="output-code">ここに出る</pre></div>
     </section>
 
   </main>
