--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <p class="txt">
             2017.05.15<br>
             ブラウザのソース、エディタ、メモ帳、どこからのコピペでもいけるようにしました（たぶん）<br>
+            bodyの中の必要最低限のコードを貼ってください。scriptなどの「'」も反応してしまいます。</br>
             変換後も必ず目視確認してください。<br>
             ---<br>
             2017.05.01<br>
@@ -36,7 +37,7 @@
     </section>
 
     <section class="output">
-      <div><pre id="output-code">ここに出る</pre></div>
+      <div><pre id="output-code">したっけここに出る。</pre></div>
     </section>
 
   </main>
